--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -41,8 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionInvokerProvider.cs" />
-    <Compile Include="InternalProxyGenerator.cs" />
-    <Compile Include="IActionInvoker.cs" />
+    <Compile Include="DynamicProxyTypeGenerator.cs" />
     <Compile Include="IProxyConfigurator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProxyGenerator.cs" />
