--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -45,11 +45,12 @@
     </Compile>
     <Compile Include="IActionInvoker.cs" />
     <Compile Include="IActionInvokerProvider.cs" />
+    <Compile Include="IProxyConfigurator.cs" />
     <Compile Include="RetryingWcfActionInvokerProvider.cs" />
     <Compile Include="DynamicProxyTypeGenerator.cs" />
     <Compile Include="IRetryingProxyConfigurator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProxyGenerator.cs" />
+    <Compile Include="WcfClientProxyGenerator.cs" />
     <Compile Include="RetryingWcfActionInvoker.cs" />
     <Compile Include="Util\FastActivator.cs" />
     <Compile Include="Util\ResharperAnnotations.cs" />
