--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DynamicProxyTypeGenerator.cs" />
     <Compile Include="IRetryingProxyConfigurator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\DictionaryExtensions.cs" />
     <Compile Include="WcfClientProxyGenerator.cs" />
     <Compile Include="RetryingWcfActionInvoker.cs" />
     <Compile Include="Util\FastActivator.cs" />
