Added tests for the DictionaryExtensions class

--- a/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
+++ b/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChannelFactoryProviderTests.cs" />
+    <Compile Include="DictionaryExtensionsTests.cs" />
     <Compile Include="FastActivatorTests.cs" />
     <Compile Include="ProxyTests.cs" />
     <Compile Include="Infrastructure\InProcTestFactory.cs" />
