--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -17,7 +17,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -51,6 +51,7 @@
     <Compile Include="DynamicProxyTypeGenerator.cs" />
     <Compile Include="IRetryingProxyConfigurator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Async\AsyncExtensions.cs" />
     <Compile Include="Util\DictionaryExtensions.cs" />
     <Compile Include="WcfClientProxyGenerator.cs" />
     <Compile Include="RetryingWcfActionInvoker.cs" />
