Added default proxy configurator The default configurator attempts to use a client endpoint configuration with the same name as the full namespace of the service interface

--- a/source/WcfClientProxyGenerator.Tests/App.config
+++ b/source/WcfClientProxyGenerator.Tests/App.config
@@ -2,6 +2,11 @@
 <configuration>
   <system.serviceModel>
     <client>
+      <endpoint name="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+                address="http://localhost"
+                binding="wsHttpBinding"
+                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"/>
+      
       <endpoint name="ITestService"
                 address="http://localhost:23456/TestService"
                 binding="wsHttpBinding"
