--- a/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
+++ b/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="AsyncExtensionTests.cs" />
     <Compile Include="ChannelFactoryProviderTests.cs" />
+    <Compile Include="DefaultProxyConfiguratorTests.cs" />
     <Compile Include="DictionaryExtensionsTests.cs" />
     <Compile Include="FastActivatorTests.cs" />
     <Compile Include="Infrastructure\ITestService2.cs" />
