--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Async\AsyncExtensions.cs" />
     <Compile Include="Util\DictionaryExtensions.cs" />
+    <Compile Include="Util\TypeExtensions.cs" />
     <Compile Include="WcfClientProxyGenerator.cs" />
     <Compile Include="RetryingWcfActionInvoker.cs" />
     <Compile Include="Util\FastActivator.cs" />
