Fixed issue where generating a proxy for an interface that inherits from another interface would fail to implement the OperationContracts from the parent interface(s)

--- a/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
+++ b/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
@@ -53,6 +53,8 @@
     <Compile Include="DefaultProxyConfiguratorTests.cs" />
     <Compile Include="DictionaryExtensionsTests.cs" />
     <Compile Include="FastActivatorTests.cs" />
+    <Compile Include="Infrastructure\ChildServiceImpl.cs" />
+    <Compile Include="Infrastructure\IChildService.cs" />
     <Compile Include="Infrastructure\ITestService2.cs" />
     <Compile Include="Infrastructure\TestService2Impl.cs" />
     <Compile Include="ProxyTests.cs" />
