Added additional overloads to WcfClientProxy.Create<> to support common configurations

--- a/source/WcfClientProxyGenerator.Tests/App.config
+++ b/source/WcfClientProxyGenerator.Tests/App.config
@@ -1,12 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.serviceModel>
-    <client>
-      <endpoint name="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
-                address="http://localhost"
-                binding="wsHttpBinding"
-                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"/>
-      
+    <client>    
       <endpoint name="ITestService"
                 address="http://localhost:23456/TestService"
                 binding="wsHttpBinding"
@@ -16,6 +11,11 @@
                 address="http://localhost:23456/TestService2"
                 binding="wsHttpBinding"
                 contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"/>
+
+      <endpoint name="ITestServiceSingleEndpointConfig"
+                address="http://localhost:23456/TestService2"
+                binding="wsHttpBinding"
+                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestServiceSingleEndpointConfig"/>
     </client>
   </system.serviceModel>
 </configuration>
