Add OnBeforeInvoke and OnAfterInvoke events
Support for hooking into service calls. Separate
events can be configured that will be fired before
and after the service method has been called.

--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -57,6 +57,7 @@
     <Compile Include="IActionInvoker.cs" />
     <Compile Include="IActionInvokerProvider.cs" />
     <Compile Include="IProxyConfigurator.cs" />
+    <Compile Include="OnInvokeHandler.cs" />
     <Compile Include="Policy\ConstantDelayPolicy.cs" />
     <Compile Include="Policy\ExponentialBackoffDelayPolicy.cs" />
     <Compile Include="Policy\IDelayPolicy.cs" />
