Add method name and parameters to OnInvoke events
Modifies the proxy IL generator to report the
method name and parameters it was called with.

--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -56,6 +56,7 @@
     <Compile Include="DefaultProxyConfigurator.cs" />
     <Compile Include="IActionInvoker.cs" />
     <Compile Include="IActionInvokerProvider.cs" />
+    <Compile Include="InvokeInfo.cs" />
     <Compile Include="IProxyConfigurator.cs" />
     <Compile Include="OnInvokeHandler.cs" />
     <Compile Include="Policy\ConstantDelayPolicy.cs" />
