--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -58,6 +58,7 @@
     <Compile Include="IActionInvokerProvider.cs" />
     <Compile Include="InvokeInfo.cs" />
     <Compile Include="IProxyConfigurator.cs" />
+    <Compile Include="OnExceptionHandler.cs" />
     <Compile Include="OnInvokeHandler.cs" />
     <Compile Include="Policy\ConstantDelayPolicy.cs" />
     <Compile Include="Policy\ExponentialBackoffDelayPolicy.cs" />
