Starting work on creating an async proxy wrapper

--- a/source/WcfClientProxyGenerator.Tests/App.config
+++ b/source/WcfClientProxyGenerator.Tests/App.config
@@ -1,21 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.serviceModel>
-    <client>    
-      <endpoint name="ITestService"
-                address="http://localhost:23456/TestService"
-                binding="wsHttpBinding"
-                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"/>
-      
-      <endpoint name="ITestService2"
-                address="http://localhost:23456/TestService2"
-                binding="wsHttpBinding"
-                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"/>
-
-      <endpoint name="ITestServiceSingleEndpointConfig"
-                address="http://localhost:23456/TestService2"
-                binding="wsHttpBinding"
-                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestServiceSingleEndpointConfig"/>
+    <bindings />
+    <client>
+      <endpoint address="http://localhost:23456/TestService" binding="wsHttpBinding"
+        contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+        name="ITestService" />
+      <endpoint address="http://localhost:23456/TestService2" binding="wsHttpBinding"
+        contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+        name="ITestService2" />
+      <endpoint address="http://localhost:23456/TestService2" binding="wsHttpBinding"
+        contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestServiceSingleEndpointConfig"
+        name="ITestServiceSingleEndpointConfig" />
     </client>
   </system.serviceModel>
 </configuration>
