Added OnCallBegin and OnCallEnd events

--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -61,6 +61,8 @@
     <Compile Include="IActionInvokerProvider.cs" />
     <Compile Include="InvokeInfo.cs" />
     <Compile Include="IProxyConfigurator.cs" />
+    <Compile Include="OnCallBeginHandler.cs" />
+    <Compile Include="OnCallEndHandler.cs" />
     <Compile Include="OnExceptionHandler.cs" />
     <Compile Include="OnInvokeHandler.cs" />
     <Compile Include="Policy\ConstantDelayPolicy.cs" />
