Cleaning up implementation code

--- a/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
+++ b/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="ChannelFactoryProviderTests.cs" />
     <Compile Include="DefaultProxyConfiguratorTests.cs" />
     <Compile Include="DictionaryExtensionsTests.cs" />
+    <Compile Include="DynamicProxyTypeGeneratorTests.cs" />
     <Compile Include="FastActivatorTests.cs" />
     <Compile Include="Infrastructure\ChildServiceImpl.cs" />
     <Compile Include="Infrastructure\IChildService.cs" />
