Fixed test config.

--- a/source/WcfClientProxyGenerator.Tests/App.config
+++ b/source/WcfClientProxyGenerator.Tests/App.config
@@ -7,7 +7,7 @@
         contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
         name="ITestService" />
       <endpoint address="http://localhost:23456/TestService2" binding="wsHttpBinding"
-        contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+        contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService2"
         name="ITestService2" />
       <endpoint address="http://localhost:23456/TestService2" binding="wsHttpBinding"
         contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestServiceSingleEndpointConfig"
