--- a/source/WcfClientProxyGenerator.Tests/App.config
+++ b/source/WcfClientProxyGenerator.Tests/App.config
@@ -1,17 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.serviceModel>
-    <bindings />
+    <bindings>
+      <wsHttpBinding>
+        <binding name="wsHttpBinding_ITestService" maxReceivedMessageSize="12345" />
+      </wsHttpBinding>
+    </bindings>
     <client>
-      <endpoint address="http://localhost:23456/TestService" binding="wsHttpBinding"
-        contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
-        name="ITestService" />
-      <endpoint address="http://localhost:23456/TestService2" binding="wsHttpBinding"
-        contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService2"
-        name="ITestService2" />
-      <endpoint address="http://localhost:23456/TestService2" binding="wsHttpBinding"
-        contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestServiceSingleEndpointConfig"
-        name="ITestServiceSingleEndpointConfig" />
+      <endpoint address="http://localhost:23456/TestService" 
+                binding="wsHttpBinding"
+                bindingConfiguration="wsHttpBinding_ITestService"
+                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+                name="ITestService" />
+      
+      <endpoint address="http://localhost:23456/TestService2" 
+                binding="wsHttpBinding"
+                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+                name="ITestService2" />
+      
+      <endpoint address="http://localhost:23456/TestService2" 
+                binding="wsHttpBinding"
+                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestServiceSingleEndpointConfig"
+                name="ITestServiceSingleEndpointConfig" />
     </client>
   </system.serviceModel>
 </configuration>
