Endpoint behaviors are now correctely setup when configuring a proxy using the endpoint configuration name

--- a/source/WcfClientProxyGenerator.Tests/App.config
+++ b/source/WcfClientProxyGenerator.Tests/App.config
@@ -6,6 +6,13 @@
         <binding name="wsHttpBinding_ITestService" maxReceivedMessageSize="12345" />
       </wsHttpBinding>
     </bindings>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="webHttp">
+          <webHttp helpEnabled="true" />
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
     <client>
       <endpoint address="http://localhost:23456/TestService" 
                 binding="wsHttpBinding"
@@ -22,6 +29,12 @@
                 binding="wsHttpBinding"
                 contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestServiceSingleEndpointConfig"
                 name="ITestServiceSingleEndpointConfig" />
+
+      <endpoint address="http://localhost:23456/BehaviorService"
+                binding="webHttpBinding"
+                behaviorConfiguration="webHttp"
+                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+                name="BehaviorService" />
     </client>
   </system.serviceModel>
 </configuration>
