Added test for the initial duplex channel support

--- a/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
+++ b/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ChannelFactoryProviderTests.cs" />
     <Compile Include="DefaultProxyConfiguratorTests.cs" />
     <Compile Include="DictionaryExtensionsTests.cs" />
+    <Compile Include="DuplexProxyTests.cs" />
     <Compile Include="DynamicProxyTypeGeneratorTests.cs" />
     <Compile Include="FastActivatorTests.cs" />
     <Compile Include="Infrastructure\AssertExt.cs" />
