Issue #19 Trailing slash on the ServiceContract Namespace was copied onto the generated async OperationContract methods.

--- a/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
+++ b/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
@@ -70,6 +70,7 @@
     <Compile Include="FastActivatorTests.cs" />
     <Compile Include="Infrastructure\AssertExt.cs" />
     <Compile Include="Infrastructure\ChildServiceImpl.cs" />
+    <Compile Include="Infrastructure\TrailingSlashOnNamespaceService.cs" />
     <Compile Include="Infrastructure\IChildService.cs" />
     <Compile Include="Infrastructure\ITestService2.cs" />
     <Compile Include="Infrastructure\IOutParamTestService.cs" />
