--- a/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
+++ b/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
@@ -41,11 +41,13 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Moq">
-      <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
+    <Reference Include="NSubstitute, Version=1.10.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
+      <HintPath>..\packages\NSubstitute.1.10.0.0\lib\net45\NSubstitute.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -68,22 +70,18 @@
     <Compile Include="DuplexProxyTests.cs" />
     <Compile Include="DynamicProxyTypeGeneratorTests.cs" />
     <Compile Include="FastActivatorTests.cs" />
-    <Compile Include="Infrastructure\AssertExt.cs" />
-    <Compile Include="Infrastructure\ChildServiceImpl.cs" />
+    <Compile Include="Infrastructure\ResetEventExt.cs" />
+    <Compile Include="Infrastructure\ExceptionDetailService.cs" />
     <Compile Include="Infrastructure\TrailingSlashOnNamespaceService.cs" />
     <Compile Include="Infrastructure\IChildService.cs" />
     <Compile Include="Infrastructure\ITestService2.cs" />
     <Compile Include="Infrastructure\IOutParamTestService.cs" />
     <Compile Include="Infrastructure\ITestServiceSingleEndpointConfig.cs" />
-    <Compile Include="Infrastructure\TestService2Impl.cs" />
     <Compile Include="DelayPolicyTests.cs" />
-    <Compile Include="Infrastructure\OutParamTestServiceImpl.cs" />
-    <Compile Include="Infrastructure\TestServiceSingleEndpointConfigImpl.cs" />
     <Compile Include="ProxyTests.cs" />
     <Compile Include="Infrastructure\InProcTestFactory.cs" />
     <Compile Include="Infrastructure\ITestService.cs" />
     <Compile Include="Infrastructure\TestBase.cs" />
-    <Compile Include="Infrastructure\TestServiceImpl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RetryingWcfActionInvokerTests.cs" />
     <Compile Include="SanityTests.cs" />
