--- a/source/WcfClientProxyGenerator.Tests/packages.config
+++ b/source/WcfClientProxyGenerator.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="NSubstitute" version="1.10.0.0" targetFramework="net45" />
   <package id="NUnit" version="3.2.1" targetFramework="net45" />
+  <package id="NUnit.ConsoleRunner" version="3.2.1" targetFramework="net45" />
 </packages>
