--- a/source/WcfClientProxyGenerator.Tests/App.config
+++ b/source/WcfClientProxyGenerator.Tests/App.config
@@ -3,7 +3,8 @@
   <system.serviceModel>
     <bindings>
       <wsHttpBinding>
-        <binding name="wsHttpBinding_ITestService" maxReceivedMessageSize="12345" />
+        <binding name="wsHttpBinding_ITestService" 
+	maxReceivedMessageSize="12345" />
       </wsHttpBinding>
     </bindings>
     <behaviors>
@@ -37,4 +38,8 @@
                 name="BehaviorService" />
     </client>
   </system.serviceModel>
+  <startup>
+    <supportedRuntime version="v4.0"
+                      sku=".NETFramework,Version=v4.6.1"/>
+  </startup>
 </configuration>
