--- a/source/WcfClientProxyGenerator.Tests.Services/WcfClientProxyGenerator.Tests.Services.csproj
+++ b/source/WcfClientProxyGenerator.Tests.Services/WcfClientProxyGenerator.Tests.Services.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFrameworks>netstandard1.1;net45</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.ServiceModel.Http" Version="4.4.0" />
+    <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.0" />
   </ItemGroup>
 </Project>
