Renaming Standard projects

--- a/source/WcfClientProxyGenerator.Tests/App.config
+++ b/source/WcfClientProxyGenerator.Tests/App.config
@@ -17,23 +17,23 @@
       <endpoint address="http://localhost:23456/TestService" 
                 binding="wsHttpBinding"
                 bindingConfiguration="wsHttpBinding_ITestService"
-                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+                contract="WcfClientProxyGenerator.Tests.Services.ITestService"
                 name="ITestService" />
       
       <endpoint address="http://localhost:23456/TestService2" 
                 binding="wsHttpBinding"
-                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+                contract="WcfClientProxyGenerator.Tests.Services.ITestService"
                 name="ITestService2" />
       
       <endpoint address="http://localhost:23456/TestService2" 
                 binding="wsHttpBinding"
-                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestServiceSingleEndpointConfig"
+                contract="WcfClientProxyGenerator.Tests.Services.ITestServiceSingleEndpointConfig"
                 name="ITestServiceSingleEndpointConfig" />
 
       <endpoint address="http://localhost:23456/BehaviorService"
                 binding="webHttpBinding"
                 behaviorConfiguration="webHttp"
-                contract="WcfClientProxyGenerator.Tests.Infrastructure.ITestService"
+                contract="WcfClientProxyGenerator.Tests.Services.ITestService"
                 name="BehaviorService" />
     </client>
   </system.serviceModel>
