--- a/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
+++ b/source/WcfClientProxyGenerator.Tests/WcfClientProxyGenerator.Tests.csproj
@@ -1,110 +1,35 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Framework Condition="'$(Framework)' == ''">NET45</Framework>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C8B3B23C-F719-4F31-B6B7-8F02B3A817FA}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WcfClientProxyGenerator.Tests</RootNamespace>
-    <AssemblyName>WcfClientProxyGenerator.Tests</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <DefineConstants>
-    </DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <OutputPath>bin\Debug\</OutputPath>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Framework)' == 'NET45'">
-    <DefineConstants>NET45</DefineConstants>
-    <OutputPath>bin\$(Configuration)</OutputPath>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Framework)' == 'NET40'">
-    <DefineConstants>NET40</DefineConstants>
-    <OutputPath>bin\$(Configuration)\net-4.0</OutputPath>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworks>netcoreapp2.0;net45</TargetFrameworks>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NSubstitute, Version=1.10.0.0, Culture=neutral, PublicKeyToken=92dd2e9066daa5ca, processorArchitecture=MSIL">
-      <HintPath>..\packages\NSubstitute.1.10.0.0\lib\net45\NSubstitute.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="nunit.framework, Version=3.2.1.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
-      <HintPath>..\packages\NUnit.3.2.1\lib\net45\nunit.framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.5.0" />
+    <PackageReference Include="NSubstitute" Version="3.1.0" />
+    <PackageReference Include="NUnit" Version="3.9.0" />
+    <PackageReference Include="NUnit.Console" Version="3.7.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.9.0" />
+    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.4.0" />
+    <PackageReference Include="System.ValueTuple" Version="4.4.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WcfClientProxyGenerator\WcfClientProxyGenerator.csproj" />
+    <ProjectReference Include="..\WcfClientProxyGenerator.Tests.Services\WcfClientProxyGenerator.Tests.Services.csproj" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='netcoreapp2.0'">
+    <PackageReference Include="System.ServiceModel.Http" Version="4.4.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
     <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AsyncTests.cs" />
-    <Compile Include="BenchmarkTests.cs" />
-    <Compile Include="ChannelFactoryProviderTests.cs" />
-    <Compile Include="DefaultProxyConfiguratorTests.cs" />
-    <Compile Include="DictionaryExtensionsTests.cs" />
-    <Compile Include="DuplexProxyTests.cs" />
-    <Compile Include="DynamicProxyTypeGeneratorTests.cs" />
-    <Compile Include="FastActivatorTests.cs" />
-    <Compile Include="Infrastructure\ResetEventExt.cs" />
-    <Compile Include="Infrastructure\ExceptionDetailService.cs" />
-    <Compile Include="Infrastructure\TrailingSlashOnNamespaceService.cs" />
-    <Compile Include="Infrastructure\IChildService.cs" />
-    <Compile Include="Infrastructure\ITestService2.cs" />
-    <Compile Include="Infrastructure\IOutParamTestService.cs" />
-    <Compile Include="Infrastructure\ITestServiceSingleEndpointConfig.cs" />
-    <Compile Include="DelayPolicyTests.cs" />
-    <Compile Include="ProxyTests.cs" />
-    <Compile Include="Infrastructure\InProcTestFactory.cs" />
-    <Compile Include="Infrastructure\ITestService.cs" />
-    <Compile Include="Infrastructure\TestBase.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RetryingWcfActionInvokerTests.cs" />
-    <Compile Include="SanityTests.cs" />
-    <Compile Include="TypeExtensionsTests.cs" />
+    <WcfServiceHostFiles Include="..\WcfClientProxyGenerator.Tests.WcfServiceHost\bin\$(Configuration)\**\*.*" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\WcfClientProxyGenerator\WcfClientProxyGenerator.csproj">
-      <Project>{56614d90-9eea-4908-8beb-7cd6e35bfcb0}</Project>
-      <Name>WcfClientProxyGenerator</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
+  <Target Name="BeforeBuild" BeforeTargets="Build">
+    <Message Text="Building WcfClientProxyGenerator.Tests.WcfServiceHost" />
+    <MSBuild Projects="..\WcfClientProxyGenerator.Tests.WcfServiceHost\WcfClientProxyGenerator.Tests.WcfServiceHost.csproj" />
+    <Copy SourceFiles="@(WcfServiceHostFiles)" DestinationFolder="$(OutputPath)WcfServiceHost" />
   </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
