--- a/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
+++ b/source/WcfClientProxyGenerator/WcfClientProxyGenerator.csproj
@@ -1,91 +1,20 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Framework Condition="'$(Framework)' == ''">NET45</Framework>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{56614D90-9EEA-4908-8BEB-7CD6E35BFCB0}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WcfClientProxyGenerator</RootNamespace>
-    <AssemblyName>WcfClientProxyGenerator</AssemblyName>
-    <FileAlignment>512</FileAlignment>
+    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <DefineConstants>
-    </DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>bin\Debug\WcfClientProxyGenerator.xml</DocumentationFile>
+  <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
+    <DefineConstants>NETSTANDARD</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>bin\Release\WcfClientProxyGenerator.xml</DocumentationFile>
+  <PropertyGroup Condition="'$(TargetFramework)'=='net45'">
+    <DefineConstants>NETFULL</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup>
-    <DefineConstants>NET45</DefineConstants>
-    <OutputPath>bin\$(Configuration)</OutputPath>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <DocumentationFile>bin\$(Configuration)\WcfClientProxyGenerator.xml</DocumentationFile>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
+  <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
+    <PackageReference Include="System.Reflection.Emit" Version="4.3.0" />
+    <PackageReference Include="System.ServiceModel.Primitives" Version="4.4.0" />
+    <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
     <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
     <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Async\AsyncProxy.cs" />
-    <Compile Include="Async\GeneratedAsyncInterfaceAttribute.cs" />
-    <Compile Include="ChannelFactoryProvider.cs" />
-    <Compile Include="DefaultProxyConfigurator.cs" />
-    <Compile Include="IActionInvoker.cs" />
-    <Compile Include="IActionInvokerProvider.cs" />
-    <Compile Include="InstanceContext.cs" />
-    <Compile Include="InvokeInfo.cs" />
-    <Compile Include="IProxyConfigurator.cs" />
-    <Compile Include="OnCallBeginHandler.cs" />
-    <Compile Include="OnCallSuccessHandler.cs" />
-    <Compile Include="OnExceptionHandler.cs" />
-    <Compile Include="OnInvokeHandler.cs" />
-    <Compile Include="Policy\ConstantDelayPolicy.cs" />
-    <Compile Include="Policy\ExponentialBackoffDelayPolicy.cs" />
-    <Compile Include="Policy\IDelayPolicy.cs" />
-    <Compile Include="Policy\LinearBackoffDelayPolicy.cs" />
-    <Compile Include="RetryingWcfActionInvokerProvider.cs" />
-    <Compile Include="DynamicProxyTypeGenerator.cs" />
-    <Compile Include="IRetryingProxyConfigurator.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\AttributeExtensions.cs" />
-    <Compile Include="Util\DictionaryExtensions.cs" />
-    <Compile Include="Util\TypeExtensions.cs" />
-    <Compile Include="WcfClientProxy.cs" />
-    <Compile Include="RetryingWcfActionInvoker.cs" />
-    <Compile Include="Util\FastActivator.cs" />
-    <Compile Include="WcfRetryFailedException.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
